--- a/PMD-NuestraApp/app/src/main/res/layout/main_activity.xml
+++ b/PMD-NuestraApp/app/src/main/res/layout/main_activity.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageView"
         android:layout_width="192dp"
         android:layout_height="189dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.114"
@@ -22,6 +23,7 @@
         android:id="@+id/imageView2"
         android:layout_width="192dp"
         android:layout_height="189dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.99"
@@ -35,6 +37,7 @@
         android:id="@+id/imageView3"
         android:layout_width="192dp"
         android:layout_height="189dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.114"
@@ -47,6 +50,7 @@
         android:id="@+id/imageView4"
         android:layout_width="192dp"
         android:layout_height="189dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.99"
