--- a/PMD-NuestraApp/app/src/main/res/layout/register_activity.xml
+++ b/PMD-NuestraApp/app/src/main/res/layout/register_activity.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/loginText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Login"
+                    android:text="@string/tittleRegistro"
                     android:textAlignment="center"
                     android:textColor="@color/purple"
                     android:textSize="28sp"
